# hackaton-dublin

./: .commits-go-brrr  .gitattributes  .gitignore  README.md  advanced_analytics.py  analyze_features.py  export_locations.py  feature_analysis.csv  geo_estimator.py  hackaton-dublin.code-workspace  train_model.py  trained_model.json
.serena/: project.yml
backend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DOCKER.md  Dockerfile  Gemfile  IMPLEMENTATION_COMPLETE.md  INTEGRATION.md  INTEGRATION_WORKFLOW.md  Procfile  QUICK_START.md  README.md  STATUS.md  TEAM_HANDOFF.md  docker-compose.yml  entrypoint.sh  fly.toml
docs/: frontend-stripe-integration.md
frontend/: .env.example  DESIGN.md  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts
inference/: predict.py
maps/: INTEGRATION_CHECKLIST.md  analyze_boundary.py  analyze_features.py  analyze_outliers.py  data_centers.geojson  deep_model_search.py  feature_analysis.csv  geo_estimator.py  hackaton-dublin.code-workspace  infer.py  patch.py  patch2.py  profile_bottleneck.py  test_3layers.py  test_data_parsing.py  test_electricitymaps.py  test_emaps_api.py  trained_model.json  tune_idw.py  tune_regression.py  visualize_all_layers.py  visualize_choropleth.py  visualize_grid_timeseries.py  visualize_heatmap.py  visualize_interactive.py  visualize_map.py  visualize_matplotlib.py  visualize_png.py  visualize_timeseries_map.py  zone_timeseries.csv
solana/: .gitignore  Cargo.toml  README.md  phantom-integration.ts
solana/src/: keygen.rs  main.rs  mint.rs  rpc.rs  wallet.rs
(+144 files in other folders)
