[package]
name = "orbital-atlas-solana"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "src/keygen.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-keypair = "2.2"
solana-pubkey = "2.2"
solana-signer = "2.2"
solana-signature = "2.2"
solana-instruction = "2.2"
solana-transaction = { version = "2.2", features = ["bincode"] }
solana-hash = "2.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
bincode = "1"
hex = "0.4"
sha2 = "0.10"
chrono = "0.4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
